--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "bluebird": "^3.5.3",
     "react": "16.6.1",
     "react-native": "0.57.5"
   },
